--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
         "@reduxjs/toolkit": "^1.9.5",
         "axios": "^1.4.0",
         "react": "^18.2.0",
+        "react-bootstrap-pagination-control": "^1.0.5",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.45.1",
         "react-hot-toast": "^2.4.1",
+        "react-paginate": "^8.2.0",
         "react-redux": "^8.1.1",
         "react-router-dom": "^6.14.1"
     },
